-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8
-
Component/s: core-svc
-
b117
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8028895 | port-stage-ppc-aix | Mandy Chung | P3 | Resolved | Fixed | master |
com.sun.management.OSMBeanFactory is an implementation-specific class and not intended to be included in com.sun.management javadoc.
This should be fixed by a different way to instantiate the platform-dependent implementation of OperatingSystemMXBean.
This should be fixed by a different way to instantiate the platform-dependent implementation of OperatingSystemMXBean.
- backported by
-
JDK-8028895 com.sun.management.OSMBeanFactory should not be public
-
- Resolved
-
- relates to
-
JDK-8028099 Many com/sun/management/OperatingSystemMXBean tests failing with CCE (win)
-
- Closed
-