8025985: com.sun.management.OSMBeanFactory should not be public

Reviewed-by: alanb, erikj, ihse, jbachorik